// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import tests default renderer 1`] = `
<div
  className="Import"
>
  <ForwardRef(WithStyles)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Import"
        id="cboard.components.Settings.Import.import"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)
            className="Import__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Import"
                id="cboard.components.Settings.Import.import"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <ForwardRef(WithStyles)>
            <div
              className="Import__ButtonContainer"
            >
              <ForwardRef(WithStyles)
                color="primary"
                component="span"
                disabled={false}
                id="import-button"
              >
                <label
                  htmlFor="file"
                >
                  <FormattedMessage
                    defaultMessage="Import"
                    id="cboard.components.Settings.Import.import"
                    values={Object {}}
                  />
                </label>
                <input
                  id="file"
                  onChange={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  type="file"
                />
              </ForwardRef(WithStyles)>
            </div>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;

exports[`Import tests loading behavior 1`] = `
<div
  className="Import"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Import"
        id="cboard.components.Settings.Import.import"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Import__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Import"
                id="cboard.components.Settings.Import.import"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Import__ButtonContainer"
            >
              <WithStyles(ForwardRef(Button))
                color="primary"
                component="span"
                disabled={false}
                id="import-button"
              >
                <label
                  htmlFor="file"
                >
                  <FormattedMessage
                    defaultMessage="Import"
                    id="cboard.components.Settings.Import.import"
                    values={Object {}}
                  />
                </label>
                <input
                  id="file"
                  onChange={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  type="file"
                />
              </WithStyles(ForwardRef(Button))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Import tests loading behavior 2`] = `
<div
  className="Import"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Import"
        id="cboard.components.Settings.Import.import"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Import__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Import"
                id="cboard.components.Settings.Import.import"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Import__ButtonContainer"
            >
              <WithStyles(ForwardRef(CircularProgress))
                className="Import__ButtonContainer--spinner"
                size={25}
                thickness={7}
              />
              <WithStyles(ForwardRef(Button))
                color="primary"
                component="span"
                disabled={true}
                id="import-button"
              >
                <label
                  htmlFor="file"
                >
                  <FormattedMessage
                    defaultMessage="Import"
                    id="cboard.components.Settings.Import.import"
                    values={Object {}}
                  />
                </label>
                <input
                  id="file"
                  onChange={[Function]}
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                  type="file"
                />
              </WithStyles(ForwardRef(Button))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;
